2007-04-18  Mikael Hallendal  <micke@imendio.com>
	
	* src/dh-main.c (main): Call g_thread_init. Fixes bug #414221

2007-04-18  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_init): Remove the broken Esc key
	binding, it interferes with the typeahead search. The window
	manager keybindings should be used instead for minimizing the
	window.

2007-04-17  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* data/
	* data/dtd/:
	* data/ui/: Clean up a bit now that we can move things around
	nicely with svn.

2007-02-18  Ryan Lortie  <desrt@desrt.ca>

	* src/dh-window.[ch]: Add command to focus search field.
	* src/dh-main.c: Add --focus-search command line option and bacon
	  command (closes bug #409182).

2007-04-17  Richard Hult  <richard@imendio.com>

	* Apply patch from Huang Peng to add typeahead searching to the
	content area, fixes bug #116322.

2007-04-17  Richard Hult  <richard@imendio.com>

	* README: Update information about where books should be installed
	and the required version of the library we use. Fixes bug #411748.

2007-04-17  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Patch from Mariano Suárez-Alvarez to add
	missing mnemonics, bug #411376.

2007-04-17  Richard Hult  <richard@imendio.com>

	* devhelp.desktop.in.in: Patch from Kamil Páral to fix bug
	#417613, GNOME Goal #3: Remove "Application" category from
	.desktop files.

2007-04-17  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version on trunk after branching.

2007-04-17  Richard Hult  <richard@imendio.com>
	
	* configure.in: Prepare for branching.

2007-03-13  Runa Bhattacharjee <runabh@gmail.com>

	* configure.in: Added Bengali India (bn_IN) to ALL_LINGUAS.

2007-03-10  Ihar Hrachyshka <iharh@gnome.org>

	* configure.in: Added be@latin to ALL_LINGUAS.

2007-03-07  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added 'lt' (Lithuanian) to ALL_LINGUAS.

2007-02-14  Richard Hult  <richard@imendio.com>
