@@ -1,0 +1,2 @@
+pref("browser.display.use_document_colors", false);
+
